--- a/wordle.html
+++ b/wordle.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Fake Wordle </title>
     <link rel="stylesheet" href="wordle.css">
-    <script src="wordle.js"></script>
+   
 </head>
 <body>
     <header class="wordle">
@@ -14,7 +14,7 @@
         </nav>
     </header>
     <div class="wordle-container">
-        <div class="word-containers" id="letter-0">a</div>
+        <div class="word-containers" id="letter-0"></div>
         <div class="word-containers" id="letter-1"></div>
         <div class="word-containers" id="letter-2"></div>
         <div class="word-containers" id="letter-3"></div>
@@ -44,8 +44,9 @@
         <div class="word-containers" id="letter-27"></div>
         <div class="word-containers" id="letter-28"></div>
         <div class="word-containers" id="letter-29"></div>
-    </div>       
+    </div> 
    
-    
+   
+    <script src="wordle.js"></script>      
 </body>
 </html>
